--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,9 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url("https://fonts.googleapis.com/css2?family=Goblin+One&family=Inconsolata:wght@300&family=Poppins&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Goblin One", cursive;
+  font-family: "Inconsolata", monospace;
+  font-family: "Poppins", sans-serif;
+  margin: 0px;
+  padding: 0px;
 }
