added something for home section

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .profile__container {
   width: auto;
   min-height: 200vh;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
 }
 .profile__darkContainer {
   transition: 1s all ease-in;
