--- a/src/styles/particle.css
+++ b/src/styles/particle.css
@@ -1,7 +1,7 @@
-/* .particle__container {
+.particle__container {
   width: 100vw;
   height: 100vh;
   position: absolute;
   top: 0px;
-  z-index: -1;
-} */
+  z-index: 2;
+}
