--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -43,7 +43,7 @@
 .nav__icons__sun {
   font-size: 20px;
   cursor: pointer;
-  color: rgb(201, 33, 33);
+  color: #fbdd74;
 }
 .nav__icons__toggleRight {
   font-size: 20px;
