--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,6 +1,8 @@
 .about__container {
-  width: 100vw;
-  min-height: 50vh;
+  min-width: 200px;
+  height: auto;
+  margin-left: 50px;
+  max-width: 411px;
   display: flex;
   position: absolute;
   top: 70px;
@@ -12,22 +14,28 @@
 .about__mainContent {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
+
+  padding: 10px 12px;
   flex-wrap: wrap;
 }
 .about__mainContent p {
-  font-size: 30px;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 500;
   color: #1f1235;
   transition: 1s all linear;
 }
 
+.about__highlights {
+  font-weight: 600;
+}
+
 .about__myImg {
   object-fit: contain;
-  height: 100px;
+  height: 120px;
   border-radius: 100px;
   cursor: pointer;
+  margin-bottom: 30px;
   transition: 1s all ease-in-out;
 }
 .about__myImg:hover {
@@ -53,4 +61,9 @@
 }
 .about__mainContent .about__paraContent {
   color: white;
+}
+@media all and (max-width: 500px) {
+  .about__container {
+    margin-left: 20px;
+  }
 }
