added scroll animation

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -44,11 +44,13 @@ h5 {
   max-width: 600px;
   min-width: 250px;
   border-top: 2px solid black;
+  margin-bottom: 40px;
 }
 .lastRowDarkMode {
   max-width: 600px;
   min-width: 250px;
   border-top: 2px solid #fff;
+  margin-bottom: 40px;
 }
 
 @keyframes thumb {
