--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -41,9 +41,13 @@
   margin: 17px;
   display: flex;
   align-self: flex-start;
+  justify-content: center;
+  align-items: center;
 }
 .contact__email {
   margin: 17px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   align-self: flex-start;
 }
