--- a/src/styles/message.css
+++ b/src/styles/message.css
@@ -3,6 +3,11 @@
   width: 100vw;
   height: 100vh;
   justify-content: center;
+  background-image: url("../images/bg.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: drop-shadow(2px 4px 6px);
   align-items: center;
 }
 .message__content {
@@ -11,8 +16,10 @@
   justify-content: center;
   min-height: 400px;
   flex-wrap: wrap;
+  background-color: #ff8906;
+  filter: blur(0.9);
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.5);
-  /* background-color: blueviolet; */
+  margin-top: -146px;
   max-width: 800px;
   border-radius: 5px;
   padding: 40px 10px;
@@ -27,7 +34,6 @@
   justify-content: center;
   align-items: center;
   flex: 0.4;
-  /* align-self: row-reverse; */
 }
 fieldset {
   display: flex;
@@ -35,10 +41,12 @@ fieldset {
   align-items: center;
   min-height: 59px;
   padding: 10px 10px;
+  border-bottom: 1px solid black;
 }
 label {
   margin-bottom: 0px;
   margin-right: 12px;
+  font-weight: 600;
 }
 
 input {
@@ -50,10 +58,15 @@ input:focus {
   outline: none;
 }
 textarea {
-  border: 0.5px solid lightgray;
+  border: none;
+  max-height: 39px;
+  overflow: scroll;
   outline: none;
   padding: 5px 5px;
   background-color: transparent;
+}
+textarea::-webkit-scrollbar {
+  display: none;
 }
 textarea:focus {
   outline: none;
@@ -61,18 +74,39 @@ textarea:focus {
 button {
   border: none;
   text-align: center;
+  margin: 10px;
+  background-color: rgb(238, 115, 70);
   width: 100px;
   transition: 1s all ease-in;
+  font-weight: 700;
   height: 30px;
   border-radius: 4px;
 }
 button:hover {
-  background-color: tomato;
+  background-color: rgb(230, 68, 40);
 }
 .message__illustrator > svg {
   object-fit: contain;
   height: 200px;
   max-width: 460px;
+  animation-name: illus;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-duration: 1s;
+  filter: drop-shadow(2px 4px 6px);
+  padding: 10px 10px;
+  margin-bottom: 20px;
+}
+.message__form > form > h3 > b {
+  color: black;
+}
+@keyframes illus {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(20px);
+  }
 }
 #eye1 {
   animation-name: eye1;
@@ -88,7 +122,6 @@ button:hover {
   }
   to {
     transform: translateX(-40px);
-    /* transform: translateY(40px); */
   }
 }
 #eye2 {
@@ -105,7 +138,6 @@ button:hover {
   }
   to {
     transform: translateX(-40px);
-    /* transform: translateY(40px); */
   }
 }
 #mouth {
@@ -113,7 +145,6 @@ button:hover {
   animation-fill-mode: both;
   animation-iteration-count: infinite;
   animation-duration: 1s;
-  /* animation-delay: 0.5s; */
   animation-direction: alternate;
 }
 @keyframes mouth {
@@ -122,7 +153,6 @@ button:hover {
   }
   to {
     transform: rotateZ(1deg);
-    /* transform: translateY(40px); */
   }
 }
 
@@ -131,26 +161,35 @@ button:hover {
   align-items: baseline;
 }
 
-@media screen and (max-width: 500px) {
-  .message__illustrator > svg {
-    /* object-fit: contain; */
-    height: 125px;
-  }
+@media screen and (max-width: 770px) {
   .message__content {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    max-height: none;
     flex-wrap: wrap;
+    background-color: transparent;
+    filter: blur(0.9);
     box-shadow: none;
+    margin-top: -146px;
+    max-width: 800px;
+    border-radius: 5px;
     padding: 20px 0px;
   }
+  .message__form {
+    color: white;
+  }
+}
+@media screen and (max-width: 500px) {
+  .message__illustrator > svg {
+    height: 125px;
+  }
+
   .message__illustrator {
     flex: 1;
     margin-bottom: 10px;
   }
   .message__form {
     width: 100%;
-    /* align-self: row-reverse; */
   }
 }
