--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -30,12 +30,10 @@
   margin-right: 5px;
 }
 .contact__rightSide {
-  flex: 0.5;
   display: flex;
   flex-direction: column;
-  align-self: flex-end;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
 }
 .contact__phone {
   margin: 17px;
@@ -50,4 +48,27 @@
   justify-content: center;
   align-items: center;
   align-self: flex-start;
+}
+.contact__main_container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100vw;
+}
+.contact__main_container > img {
+  object-fit: contain;
+  height: 236px;
+
+  filter: drop-shadow(2px 4px 6px);
+}
+
+@media screen and (max-width: 770px) {
+  .contact__main_container > img {
+    object-fit: contain;
+    height: 213px;
+    margin-bottom: 10px;
+    filter: drop-shadow(2px 4px 6px);
+  }
 }
