added text animation

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -18,23 +18,21 @@
   display: flex;
   margin-left: 50px;
   flex-wrap: wrap;
-
-  margin-top: 30px;
+  visibility: hidden;
+  margin-top: 54px;
 }
-/* .about__name > h2 {
+.about__nameDark {
+  color: white;
+}
+.about__name > span {
+  font-size: 50px;
   font-family: "Dancing Script", cursive;
   font-weight: 900;
-  letter-spacing: 1px;
-} */
-
+}
 .about__nameDark > h2 {
   color: white;
 }
-/* .about__name > h2 > .about__lastName {
-  color: brown;
-  font-weight: 900;
-  font-family: "Dancing Script", cursive;
-} */
+
 .about__mainContent {
   display: flex;
   flex-direction: column;
@@ -86,79 +84,22 @@
 .about__mainContent .about__paraContent {
   color: white;
 }
-
-.about__name > h2 > .letter {
-  font-weight: 900;
-  transition: 0.1s all ease-in;
-  font-size: larger;
-  font-family: "Dancing Script", cursive;
-  animation-name: letters;
-  animation-duration: 2.6s;
-  animation-iteration-count: infinite;
-  animation-direction: normal;
-}
-.ltr1 {
-  animation-delay: 0s;
-}
-.ltr2 {
-  animation-delay: 0.2s;
-}
-.ltr3 {
-  animation-delay: 0.4s;
-}
-.ltr4 {
-  animation-delay: 0.6s;
-}
-.ltr5 {
-  animation-delay: 0.8s;
-}
-.ltr6 {
-  animation-delay: 1s;
-}
-.ltr7 {
-  color: brown;
-  animation-delay: 1.2s;
-}
-.ltr8 {
-  color: brown;
-  animation-delay: 1.4s;
-}
-.ltr9 {
-  color: brown;
-  animation-delay: 1.6s;
-}
-.ltr10 {
-  color: brown;
-  animation-delay: 1.8s;
-}
-.ltr11 {
-  color: brown;
-  animation-delay: 2s;
-}
-.ltr12 {
-  color: brown;
-  animation-delay: 2.2s;
-}
-.ltr13 {
-  color: brown;
-  animation-delay: 2.4s;
+.about__btnDiv {
+  margin-left: 50px;
 }
 
-@keyframes letters {
-  from {
-    opacity: 0;
-    transform: translateY(0);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(-5px);
-  }
-}
 @media all and (max-width: 500px) {
   .about__container {
     margin-left: 20px;
+    margin-bottom: 30px;
   }
   .about__name {
     margin-left: 20px;
+  }
+  .about__btnDiv {
+    margin-left: 20px;
+  }
+  .about__name > span {
+    font-size: 40px;
   }
 }
