--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,10 +4,12 @@
   height: auto;
   flex-direction: column;
   align-items: center;
+  padding: 10px 14px;
 }
 .footer__row {
   display: flex;
   align-items: center;
+  width: 100vw;
   justify-content: center;
   min-height: 75px;
 }
@@ -19,6 +21,9 @@
 }
 .footer__containerOnDark {
   color: #fff;
+}
+.footer__row > h5 {
+  text-align: center;
 }
 .footer__icon__dark {
   font-size: 50px;
@@ -44,15 +49,13 @@ h5 {
   max-width: 600px;
   min-width: 250px;
   border-top: 2px solid black;
-  margin-bottom: 40px;
-  margin-top: 36px;
+  margin: 29px 0px;
 }
 .lastRowDarkMode {
   max-width: 600px;
   min-width: 250px;
   border-top: 2px solid #fff;
-  margin-bottom: 40px;
-  margin-top: 36px;
+  margin: 29px 0px;
 }
 
 @keyframes thumb {
