--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  visibility: hidden;
   z-index: 3;
   justify-content: center;
 }
@@ -47,7 +48,12 @@
   color: #1f1235;
   transition: 1s all linear;
 }
+.btn {
+  max-width: max-content;
 
+  margin: 10px 10px;
+  visibility: hidden;
+}
 .about__highlights {
   font-weight: 600;
 }
@@ -86,6 +92,10 @@
 }
 .about__btnDiv {
   margin-left: 50px;
+  position: fixed;
+  right: 4px;
+  bottom: 4px;
+  z-index: 100;
 }
 
 @media all and (max-width: 500px) {
